Networkpolicies/network-policy-client-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: network-policy-client-pod
spec:
 containers: 
 - name: busybox
   image: radial/busyboxplus:curl
   command: ['sh', '-c', 'while true; do echo Hello world; sleep 3600; done']
 restartPolicy: Never
