Networkpolicies/network-policy-secure-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: network-policy-secure-pod
 labels:
  app: secure-app
spec:
 containers:
 - name: nginx
   image: nginx:1.7.9
   ports:
   - containerPort: 80
 restartPolicy: Always
